...
                        hoverColor: colors.onPrimary.withOpacity(0.08),
                        focusColor: colors.onPrimary.withOpacity(0.12),
                        highlightColor: colors.onPrimary.withOpacity(0.12),
                      ),
                      iconSize: 90,
                      onPressed: buttonAction,
                      tooltip: state is EngineStoppedState ? "Start Server" : "Stop Server",
                      icon: Icon(state is EngineStoppedState ? Icons.play_arrow : Icons.stop));
                }

                return Row(children: [
                  Padding(padding: const EdgeInsets.all(5.0), child: controlButton),
                  Expanded(
...
